feat: add f# project

--- a/GrpcClientCSharp/GrpcClientCSharp.csproj
+++ b/GrpcClientCSharp/GrpcClientCSharp.csproj
@@ -14,7 +14,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Client"/>
+    <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\db\db.fsproj" />
   </ItemGroup>
 
 </Project>
