--- a/db/db.fsproj
+++ b/db/db.fsproj
@@ -10,7 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="MySql.Data" Version="8.0.24" />
+    <PackageReference Include="SQLProvider" Version="1.2.1" />
   </ItemGroup>
 
 </Project>
