chore: stash work

--- a/db/db.fsproj
+++ b/db/db.fsproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.24" />
+    <PackageReference Include="Npgsql" Version="5.0.4" />
     <PackageReference Include="SQLProvider" Version="1.2.1" />
   </ItemGroup>
 
