--- a/InspectionClient/InspectionClient.fsproj
+++ b/InspectionClient/InspectionClient.fsproj
@@ -9,4 +9,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Grpc.Net.Client" Version="2.37.0" />
+  </ItemGroup>
+
 </Project>
