--- a/InspectionClient/InspectionClient.fsproj
+++ b/InspectionClient/InspectionClient.fsproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Grpc.Net.Client" Version="2.37.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GrpcClientCSharp\GrpcClientCSharp.csproj" />
+  </ItemGroup>
+
 </Project>
