--- a/InspectionClient/InspectionClient.fsproj
+++ b/InspectionClient/InspectionClient.fsproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GrpcClientCSharp\GrpcClientCSharp.csproj" />
+    <ProjectReference Include="..\ProtoBuffers\ProtoBuffers.csproj" />
   </ItemGroup>
+
 
 </Project>
