--- a/GrpcRouter/Properties/launchSettings.json
+++ b/GrpcRouter/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "GrpcBackend": {
+    "GrpcRouter": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": false,
