refactor(Solution): rename projects and change structure of solution (#3)
* chore: add grpc dependency

* feat: add f# client

* feat: remove fsharp client entirely and keep only the shell

* refactor: rename gprc router project

* refactor: rename db project

--- a/InspectionClient/InspectionClient.fsproj
+++ b/InspectionClient/InspectionClient.fsproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GrpcClientCSharp\GrpcClientCSharp.csproj" />
+    <ProjectReference Include="..\ProtoBuffers\ProtoBuffers.csproj" />
   </ItemGroup>
 
 </Project>
