refactor: remove greeter service

--- a/ProtoBuffers/ProtoBuffers.csproj
+++ b/ProtoBuffers/ProtoBuffers.csproj
@@ -13,7 +13,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
+    <Protobuf Include="Protos\inspection.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
