--- a/GrpcRouter/GrpcRouter.csproj
+++ b/GrpcRouter/GrpcRouter.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InspectionServer\InspectionServer.fsproj" />
+  </ItemGroup>
+
 </Project>
