--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,11 +12,19 @@ jobs:
     services:
       postgres:
         image: postgres:12.6
+        ports: 5432:5432
         env:
           POSTGRES_PASSWORD: dmg
           POSTGRES_USER: dmg
           POSTGRES_DB: dmg
           POSTGRES_PORT: 5432
+
+      # Set health checks to wait until postgres has started
+      options: >-
+        --health-cmd pg_isready
+        --health-interval 10s
+        --health-timeout 5s
+        --health-retries 5
 
     steps:
       - uses: actions/checkout@v2
