--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,7 +12,8 @@ jobs:
     services:
       postgres:
         image: postgres:12.6
-        ports: 5432:5432
+        ports:
+          - 5432:5432
         env:
           POSTGRES_PASSWORD: dmg
           POSTGRES_USER: dmg
