--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,9 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 5.0.x
+      - name: Lint codebase
+        run: dotnet tool install -g fantomas-tool
+        run: fantomas --recurse --check .
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
