--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,8 +27,7 @@ jobs:
         with:
           dotnet-version: 5.0.x
       - name: Lint codebase
-        run: dotnet tool install -g fantomas-tool
-        run: fantomas --recurse --check .
+        run: dotnet tool install -g fantomas-tool && fantomas --recurse --check .
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
