--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,8 @@ jobs:
         run: dotnet tool install -g fantomas-tool && fantomas --recurse --check .
       - name: Restore dependencies
         run: dotnet restore
+      - name: Migrations
+        run: dotnet ef database update
       - name: Build
         run: dotnet build --no-restore
       - name: Test
