--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Lint codebase
         run: dotnet tool install -g fantomas-tool && fantomas --recurse --check .
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet tool restore && dotnet restore
       - name: Migrations
         run: dotnet ef database update
       - name: Build
