feat:Add migrations (#8)
* feat: configure migrations

* refactor: remove FS

* fix: ef installation

* fix: dependencies

* fix: add migrations to the project

* feat: add migrations to the ci

* lint all codebase

* fix: ci

* fix ci

* fix: ci

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,9 @@ jobs:
       - name: Lint codebase
         run: dotnet tool install -g fantomas-tool && fantomas --recurse --check .
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet tool restore && dotnet restore
+      - name: Migrations
+        run: cd InspectionServer && dotnet ef database update
       - name: Build
         run: dotnet build --no-restore
       - name: Test
