--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,9 +30,9 @@ jobs:
         run: dotnet tool install -g fantomas-tool && fantomas --recurse --check .
       - name: Restore dependencies
         run: dotnet tool restore && dotnet restore
-      - name: Migrations
-        run: cd InspectionServer && dotnet ef database update
       - name: Build
         run: dotnet build --no-restore
+      - name: Migrations
+        run: cd InspectionServer && dotnet ef database update --no-build
       - name: Test
         run: dotnet test --no-build --verbosity normal
