--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Restore dependencies
         run: dotnet tool restore && dotnet restore
       - name: Migrations
-        run: cd InspectionServer && mv db/Repository.fs . && dotnet dotnet ef database update && mv Repository.fs db/
+        run: cd InspectionServer && mv db/Repository.fs . && dotnet ef database update && mv Repository.fs db/
       - name: Build
         run: dotnet build --no-restore
       - name: Test
